fix(ui): console input overflow

--- a/app/public/tailwind.css
+++ b/app/public/tailwind.css
@@ -894,6 +894,9 @@
   .w-full {
     width: 100%;
   }
+  .w-screen {
+    width: 100vw;
+  }
   .max-w-2xl {
     max-width: var(--container-2xl);
   }
@@ -908,6 +911,9 @@
   }
   .max-w-\[85\%\] {
     max-width: 85%;
+  }
+  .max-w-\[90\%\] {
+    max-width: 90%;
   }
   .max-w-lg {
     max-width: var(--container-lg);
@@ -939,6 +945,9 @@
   .min-w-\[10\%\] {
     min-width: 10%;
   }
+  .min-w-\[90\%\] {
+    min-width: 90%;
+  }
   .min-w-\[100px\] {
     min-width: 100px;
   }
@@ -962,6 +971,9 @@
   }
   .flex-shrink-0 {
     flex-shrink: 0;
+  }
+  .flex-shrink-1 {
+    flex-shrink: 1;
   }
   .shrink-0 {
     flex-shrink: 0;
@@ -2584,8 +2596,14 @@
   .text-\[\.8em\] {
     font-size: .8em;
   }
+  .text-\[0\.6rem\] {
+    font-size: 0.6rem;
+  }
   .text-\[0\.7rem\] {
     font-size: 0.7rem;
+  }
+  .text-\[0\.65rem\] {
+    font-size: 0.65rem;
   }
   .text-\[0px\] {
     font-size: 0px;
@@ -4839,6 +4857,11 @@
   .lg\:max-w-none {
     @media (width >= 64rem) {
       max-width: none;
+    }
+  }
+  .lg\:min-w-72 {
+    @media (width >= 64rem) {
+      min-width: calc(var(--spacing) * 72);
     }
   }
   .lg\:flex-1 {
